Profile image cropping (buggy)

--- a/frontend/src/components/AccountPage/AccountPage.module.css
+++ b/frontend/src/components/AccountPage/AccountPage.module.css
@@ -58,45 +58,6 @@ textarea {
     cursor: pointer;
 }
 
-.ImageUploadContainer {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.ImageUploadContainer img {
-    position: relative;
-    top: -10px;
-    height: 150px;
-    width: 150px;
-    border: 4px dashed var(--accent);
-}
-
-.ImageUpload {
-    position: relative;
-    width: 70%;
-    margin-left : 10px;
-    height: 150px;
-    border: 4px dashed var(--bold);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    transition: all 300ms;
-
-}
-
-.ImageUpload:hover {
-    background: rgba(0,0,0,0.1);
-}
-
-.ImageUpload p{
-    margin: 0;
-    color: var(--bold);
-    font-weight: 700;
-    user-select: none;
-}
-
 .SubmitContainer {
     width: 100%;
     display: flex;
